# search_engine_project

./: .env  .gitignore  README.md  crawler.ipynb  crawler_part1.py  index.py  myapi.py  parse_page.py  pyproject.toml  query.ipynb  req.txt  requirements.txt  scraper.py  test.ipynb  time_spellchecker.py  unzip.py
helper_api/: api.py  shemas.py  spellchecker.py  time_spellchecker.py
search_engine/: __init__.py  api.py  crawl.py  highlight.py  query.py  schemas.py  spelling_api.py  spelling_fix.py
search_engine/static/css/: searchstyle.css  style.css
search_engine/templates/: helper_api_down.html  no_result.html  response.html  start.html  validation_error.html
spell_correction/: spelling_api.py  time_spellchecker.py
src/: __init__.py  crawl.py  myapi.py  query.py  test.py  test_api.py
src/static/css/: searchstyle.css  style.css
src/static/js/: particle-system.js
src/templates/: no_result.html  response.html  start.html
templates/: response.html
tests/: test_api.py  test_flask_api.py  test_highlighting.py  test_spell_checking.py  test_spell_checking_api.py
utils/: unzip.py
